--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
 <head>
   <meta charset="utf-8">
@@ -27,9 +29,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/DazzaGreenwood/LawChain/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/DazzaGreenwood/LawChain/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/DazzaGreenwood/LawChain" class="code">View LawChain.org on GitHub</a>
+          <a href="https://github.com/LawChain/LawChain/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/LawChain/LawChain/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/LawChain/LawChain" class="code">View LawChain.org on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -56,31 +58,25 @@
 <p><strong>How Do I Join the Open Source Project Business, Legal or Technical Teams?</strong></p>
 
 <ul>
-<li>Use the Form Embedded Below: </li>
+<li>Use the Google Form Embedded below to Join:</li>
 </ul>
-
-<center>
-<iframe src="https://docs.google.com/a/civics.com/forms/d/1Up7KCmiJyY8hyqo5qZMxoYNogry4fQE59ldfVwLik-E/viewform?embedded=true" width="650" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
-</center>
-
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/DazzaGreenwood" class="avatar"><img src="https://avatars2.githubusercontent.com/u/6296754?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/DazzaGreenwood">DazzaGreenwood</a> maintains <a href="https://github.com/DazzaGreenwood/LawChain">LawChain.org</a></p>
+      <p><a href="https://github.com/LawChain" class="avatar"><img src="https://avatars0.githubusercontent.com/u/20394858?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/LawChain">LawChain</a> maintains <a href="https://github.com/LawChain/LawChain">LawChain.org</a></p>
 
 
       </div>
       <div class="creds">
-        <small>This page uses the excellent <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
       </div>
     </footer>
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/DazzaGreenwood/LawChain/tarball/master" class="tar">tar</a><a href="https://github.com/DazzaGreenwood/LawChain/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/LawChain/LawChain/tarball/master" class="tar">tar</a><a href="https://github.com/LawChain/LawChain/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
