--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/LawChain/LawChain/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/LawChain/LawChain/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/LawChain/LawChain" class="code">View LawChain.org on GitHub</a>
+          <a href="https://github.com/LawChain/project/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/LawChain/project/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/LawChain/project" class="code">View LawChain.org on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -70,7 +70,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/DazzaGreenwood" class="avatar"><img src="https://avatars2.githubusercontent.com/u/6296754?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/DazzaGreenwood">DazzaGreenwood</a> maintains <a href="https://github.com/DazzaGreenwood/LawChain">LawChain.org</a></p>
+      <p><a href="https://github.com/DazzaGreenwood" class="avatar"><img src="https://avatars2.githubusercontent.com/u/6296754?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/DazzaGreenwood">DazzaGreenwood</a> maintains <a href="https://github.com/LawChain/project">LawChain.org</a></p>
 
 
       </div>
@@ -81,7 +81,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/DazzaGreenwood/LawChain/tarball/master" class="tar">tar</a><a href="https://github.com/DazzaGreenwood/LawChain/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/LawChain/project/tarball/master" class="tar">tar</a><a href="https://github.com/DazzaGreenwood/LawChain/project/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
