--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">LawChain.org</h1>
+      <h1 class="title">Project LawChain</h1>
     </header>
     <div id="container">
       <p class="tagline">Liberating the Law One Block at a Time</p>
