--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 <ul>
 <li>See the Internet livestream of <a href="https://www.linkedin.com/pulse/second-annual-legalhackers-global-congress-dazza-greenwood?published=t">LegalHackers Global Congress Panel on Blockchain and Law</a> for a Sneak-Peek of the LawChain Demo </li>
+<li> Also, monitor the tag <a href="https://twitter.com/search?q=%23LawChain">#LawChain</a> for Tweets about the project.</li>
+
 </ul>
 
 <p><strong>What is This GitHub Repository Used For?</strong></p>
