--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
 <p><strong>What is This GitHub Repository Used For?</strong></p>
 
 <ul>
-<li>This Repo Will be Used for the Open Source Reference Implementation or LawChain</li>
+<li><a href="https://github.com/LawChain/project">This Repo </a>Will be Used for the Open Source Reference Implementation or LawChain</li>
 </ul>
 
 <p><strong>How Do I Join the Open Source Project Business, Legal or Technical Teams?</strong></p>
 
 <ul>
-<li>Use the Form Embedded Below: </li>
+<li> Join a LawChain working session in person on online with <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/232573469/">Massachusetts Legal Hackers </a>.  To get a link for online participation via Hangout, just signup on the form below. </li>
+
+<li>To Signup, Use the Form Embedded Below: </li>
 </ul>
 
 <center>
