--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1 class="title">Project LawChain</h1>
     </header>
     <div id="container">
-      <p class="tagline">Liberating the Law One Block at a Time</p>
+      <p class="tagline">Liberating the Law One Link at a Time</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
