--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <p><strong>How Do I Join the Open Source Project Business, Legal or Technical Teams?</strong></p>
 
 <ul>
-<li> Join a LawChain working session in person on online with <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/232573469/">Massachusetts Legal Hackers </a>.  To get a link for online participation via Hangout, just signup on the form below. </li>
+<li> Join a LawChain online working session with <a href="http://www.meetup.com/Massachusetts-Legal-Hackers/events/232573469/">Massachusetts Legal Hackers </a>.  To get a link for online participation via Hangout, just signup on the form below. </li>
 
 <li>To Signup, Use the Form Embedded Below: </li>
 </ul>
