--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Livecast of the LegalHackers.org Summit Happening in Brooklyn, NY.  Dazza Greenw
 
       </div>
       <div class="creds">
-        <small>This page uses the excellent <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <small>This page uses the clean  <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
       </div>
     </footer>
   </div>
