--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
 <h3>  Legal Hackers Summit 2016 </h3>
 Livecast of the LegalHackers.org Summit Happening in Brooklyn, NY.  Dazza Greenwood discusses the LawChain project on a panel about blockchains and the law.  <p>
   
-  <iframe width="420" height="315" src="http://www.youtube.com/embed/CnVfuuauMLg" frameborder="0" allowfullscreen></iframe>
-  
+  <iframe width="420" height="315" src="http://www.youtube.com/embed/CnVfuuauMLg?t=27m40s" frameborder="0" allowfullscreen></iframe>
 </p>
 
 <hr>   
          
          <p></p>
-          <p><strong>What is LawChain?</strong>  </p>
+          <p><strong>What is a LawChain?</strong>  </p>
 
 <ul>
 <li>Read Dazza Greenwood's Medium Post: <a href="https://medium.com/@dazza/law-itself-is-the-killer-blockchain-app-5ccf7d86d8d8#.bqzhow3y4">"Law Itself is the Killer Blockchain App"</a>
