--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
        <article class="markdown-body">
          
 <h3>  Legal Hackers Summit 2016 </h3>
-Livecast of the LegalHackers.org Summit Happening in Brooklyn, NY.  Dazza Greenwood discusses the LawChain project on a panel about blockchains and the law.  <p>
+Livecast of the LegalHackers.org Summit that happened in Brooklyn, NY last summer.  Dazza Greenwood discusses the LawChain project on a panel about blockchains and the law.  <p>
   
   <iframe width="420" height="315" src="http://www.youtube.com/embed/CnVfuuauMLg?t=27m40s" frameborder="0" allowfullscreen></iframe>
 </p>
