--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Livecast of the LegalHackers.org Summit that happened in Brooklyn, NY last summe
   
   <iframe width="420" height="315" src="http://www.youtube.com/embed/CnVfuuauMLg?t=27m40s" frameborder="0" allowfullscreen></iframe>
 </p>
-
+The LawChain segment is at Minute 27 Second 40 of the YouTube video, accessible directly at this link: <a href="https://youtu.be/CnVfuuauMLg?t=27m40s">https://youtu.be/CnVfuuauMLg?t=27m40s</a>
 <hr>   
          
          <p></p>
